Fix submit disabling on savedgroupform, start updating warning/error behavior

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -92,6 +92,9 @@ pre {
 .text-error-red {
   color: colors.$danger;
 }
+.text-error-muted {
+  color: var(--alert-danger-color);
+}
 .text-success-green {
   color: colors.$success;
 }
